# ora

./: Cargo.toml  README  README.md
src/: error.rs  main.rs  table.rs
src/cli/: command.rs
src/connection/: interpreter.rs
src/encryptor/: encryptor.rs
src/register/: register.rs
src/storage/: mod.rs  storage.rs
src/vault/: vault.rs
